...
    icon: Icon.Scan,
    iconSize: 20,
  });

  return (
    <BaseLayout insets={{ top: false, bottom: false }}>
      <View className="flex-1" testID="send-search-contacts-screen">
        <View className="mb-8">
          <Input
            fieldSize="lg"
            leftElement={
              <Icon.UserCircle
                size={16}
                color={themeColors.foreground.primary}
              />
            }
            testID="send-recipient-input"
            placeholder={t("sendPaymentScreen.inputPlaceholder")}
            onChangeText={handleSearch}
            endButton={{
              content: t("common.paste"),
              onPress: handlePasteFromClipboard,
            }}
...
