...
      transactionXDR,
      isRecipientMuxed,
    ],
  );

  return (
    <View className="flex-1 gap-[12px]" testID="send-review-sheet">
      <View className="rounded-[16px] p-[16px] gap-[16px] bg-background-tertiary">
        <Text lg>{t("transactionReviewScreen.title")}</Text>
        <View className="gap-[16px]">
          {type === SendType.Token &&
            selectedBalance &&
            tokenAmount &&
...
              : t("transactionAmountScreen.confirmAnyway")
          }
          onPress={onConfirm}
          isLoading={isLoading}
          disabled={isDisabled}
          variant={isMalicious ? "error" : "secondary"}
          testID="send-review-confirm-anyway-button"
        />
      );

      if (!shouldUseRowLayout) {
        return (
          <>
...
