...
  const midListItems = [
    {
      icon: <Icon.Server05 size={24} color={themeColors.foreground.primary} />,
      title: t("settings.network"),
      titleColor: themeColors.text.primary,
      onPress: () => navigation.navigate(SETTINGS_ROUTES.CHANGE_NETWORK_SCREEN),
      testID: "change-network-button",
    },
    {
      icon: (
        <Icon.LifeBuoy01 size={24} color={themeColors.foreground.primary} />
      ),
      title: t("settings.help"),
...
