...
  onPress,
  icon: CustomIcon,
  iconSize = 24,
  iconColor,
  className: customClassName,
  hitSlop = { top: 10, bottom: 10, left: 10, right: 10 },
  testID = "header-button",
  accessibilityLabel,
}) => {
  const navigation = useNavigation();
  const { themeColors } = useColors();
  const baseColor = iconColor ?? themeColors.base[1];

...
