...
      fetchAccountsFiatTotals,
      allAccounts,
    ]);

    return (
      <BaseLayout
        testID="home-screen"
        insets={{ bottom: false, top: false, left: false, right: false }}
      >
        <WelcomeBannerBottomSheet
          modalRef={welcomeBannerBottomSheetModalRef}
          onAddXLM={navigateToBuyXLM}
          onDismiss={handleWelcomeBannerDismiss}
...
            {swapEnabled && (
              <HomeActionButton
                Icon={Icon.RefreshCw02}
                title={t("home.swap")}
                disabled={hasZeroBalance}
                onPress={handleSwapPress}
                testID="icon-button-swap"
              />
            )}
          </View>

          <TokensCollectiblesTabs
            // Should disable inner scrolling here since the whole Home screen is scrollable
...
